[project]
name = "agentic-workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "donatien konan",email = "donatien.konan.pro@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "openai (>=1.63.0,<2.0.0)",
    "deepseek (>=1.0.0,<2.0.0)",
    "langchain (>=0.3.18,<0.4.0)",
    "ipython (==8.18.1)"
]

[tool.poetry]
packages = [{include = "agenticworkflow", from = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
